fcomUtil-R1-1-28: scondam (11/11/2014)
                  Build with fcom-R1-3-26
				  
fcomUtil-R1-1-27: luchini (04/15/2014)
                  Build against fcom-R1-3-25 with event-R4-1-1

fcomUtil-R1-1-26: lpiccoli (02/20/2014)
                  Build against fcom-R1-3-24 (with updated event module: event-R4-1-0)

fcomUtil-R1-1-25: Re-build against fcom-R1-3-23 for the general audience
                  Shantha Condamoor: 27-Feb-2014
fcomUtil-R1-1-24: Build against fcom-R1-3-21
                  Shantha Condamoor: 27-Feb-2014
				  For llrf6 which does not use fcom-R1-3-23
				  Add TCAV to detector list.
fcomUtil-R1-1-23: Build against fcom-R1-3-23

fcomUtil-R1-1-22: Build against fcom-R1-3-22

fcomUtil-R1-1-21: Build against fcom-R1-3-21

fcomUtil-R1-1-20: Build against fcom-R1-3-20

fcomUtil-R1-1-19: Build against fcom-R1-3-19

fcomUtil-R1-1-18: Build against fcom-R1-3-18

fcomUtil-R1-1-17: Build against fcom-R1-3-17

fcomUtil-R1-1-16: Build against fcom-R1-3-16

fcomUtil-R1-1-15: Build MAIN_TRUNK against fcom + udpComm MAIN_TRUNK
                  Build for all arches except vxworks
fcomUtil-R1-1-14: Build against fcom-R1-3-14

fcomUtil-R1-1-13: Build against fcom-R1-3-13

fcomUtil-R1-1-12: fixed a duplicate define of FC_STAT_XANG_INVAL and changed debug print level to DP_ERROR
fcomUtil-R1-1-11: changed to build against fcom-R1-3-12 --> udpComm-R2-3-0 -->event_R3-2-2-br_generaltime-2-2
fcomUtil-R1-1-10: changed to build against fcom-R1-3-11 --> udpComm-R2-2-2 -->event_R3-2-2-br_generaltime-2-2

fcomUtil-R1-1-9: changed to build against fcom-R1-3-10 --> udpComm-R2-2-1 -->event-R3-2-2-br_generaltime-2-1 

fcomUtil-R1-1-8: changed to build against fcom-R1-3-9 --> udpComm-R2-2-0 -->event-R3-2-2-br_generaltime-2-0 

fcomUtil-R1-1-7: changed to build against fcom-R1-3-8 --> udpComm-R2-1-6 -->event-R3-2-1-br_backprop-2-1 
                 with base-R3-14-8-2-lcls6_p1
